# executorch

backends/qualcomm/_passes/: __init__.py  layout_transform.py  utils.py
backends/qualcomm/builders/: __init__.py  custom_ops.py  op_tman_linear.py  qnn_constants.py  utils.py
backends/qualcomm/partition/: common_defs.py  qnn_partitioner.py
backends/qualcomm/quantizer/: annotators.py  custom_annotation.py
backends/qualcomm/runtime/: QnnManager.cpp
backends/qualcomm/runtime/backends/: QnnBackendCommon.cpp  QnnBackendFactory.cpp  QnnBackendFactory.h
backends/qualcomm/runtime/op_packages/TMANOpPackage/: Makefile
backends/qualcomm/runtime/op_packages/TMANOpPackage/include/: hvx_funcs.h
backends/qualcomm/runtime/op_packages/TMANOpPackage/src/: TMANOpPackageInterface.cpp
backends/qualcomm/runtime/op_packages/TMANOpPackage/src/ops/: TMANFinalize.cpp  TMANLinear.cpp  TMANPrecompute.cpp
backends/qualcomm/tests/: test_tman_linear.py
backends/qualcomm/utils/: utils.py
devtools/etdump/: etdump_flatcc.cpp
devtools/etdump/data_sinks/: buffer_data_sink.cpp
devtools/inspector/: _inspector.py
examples/demo-apps/android/LlamaDemo/app/src/main/java/com/example/executorchllamademo/: SettingsActivity.java
examples/models/llama/: export_llama_lib.py
examples/qualcomm/oss_scripts/bitnet/model/: static_bitnet.py  static_llama.py
examples/qualcomm/oss_scripts/llama/: CMakeLists.txt  convert_gptq_weights_to_llama.py  llama.py  qnn_llama_runner.cpp
examples/qualcomm/oss_scripts/llama/model/: static_llama.py
examples/qualcomm/oss_scripts/llama/runner/: CMakeLists.txt  io_manager.cpp  io_manager.h  runner.cpp  runner.h
examples/qualcomm/oss_scripts/llama3_2/: CMakeLists.txt
examples/qualcomm/oss_scripts/llama3_2/runner/: runner.cpp  runner.h
examples/qualcomm/oss_scripts/qwen3/: qwen3.py
extension/android/: CMakeLists.txt
extension/android/jni/: jni_layer_llama.cpp
extension/android_test/: setup.sh
runtime/platform/: abort.cpp  assert.h
